# jota_backend_assessment

./: .gitignore  Case - Dev Backend (Paulo Júnior).txt  Dockerfile  README.md  anotações.txt  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
jota_backend_assessment/: manage.py
jota_backend_assessment/jota_backend_assessment/: asgi.py  settings.py  urls.py  wsgi.py
jota_backend_assessment/news_api/: models.py  serializers.py  urls.py  views.py
jota_backend_assessment/news_api/migrations/: 0001_initial.py
jota_backend_assessment/tests/: test_auth.py  test_editor.py  test_news.py  test_permissions.py  test_readers.py  test_security.py
